--- a/CSS animations.@keyframes/style.css
+++ b/CSS animations.@keyframes/style.css
@@ -2,7 +2,7 @@ body {
   margin: 40px;
 }
 .circle {
-  background: green;
+  background: blue;
   border-radius: 100%;
   width: 100px;
   height: 100px;
